--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest",
     "build": "tsc",
     "linter": "eslint ./src/App.tsx",
+    "linter:fix":"eslint --fix ./src/App.tsx",
     "prettier": "prettier --write ./src/App.tsx"
   },
   "dependencies": {
